@@ -8,7 +8,7 @@ package #don't index
     Class::Accessor::Fast;
 
 use Moo;
-use strictures 1;
+use strictures 2;
 with 'MooX::Emulate::Class::Accessor::Fast';
 
 1;
