@@ -1,3 +1,8 @@
+
+#!/usr/bin/env perl
+use strictures 2;
+use Test2::V0;
+
 {
     package My::Class;
     use Moo;
@@ -10,7 +15,12 @@
     }
 }
 
-use Test::More tests => 1;
 my $i = My::Class->new(totally_random_not_an_attribute => 1);
-is $i->{totally_random_not_an_attribute}, 1, 'Unknown attrs get into hash';
 
+is(
+  $i->{totally_random_not_an_attribute},
+  1,
+  'Unknown attrs get into hash',
+);
+
+done_testing;
