@@ -1,9 +1,9 @@
 #!/usr/bin/env perl
-use strictures 1;
+use strictures 2;
+use Test2::V0;
 
-use Test::More;
+require MooX::Adopt::Class::Accessor::Fast;
 
-require_ok("MooX::Adopt::Class::Accessor::Fast");
 {
   @Foo::ISA = qw(Class::Accessor::Fast);
   Foo->mk_accessors(qw( foo ));
