@@ -1,10 +1,9 @@
 #!/usr/bin/env perl
-use strictures 1;
+use strictures 2;
+use Test2::V0;
 
-use Test::More;
-use Test::Exception;
+use MooX::Emulate::Class::Accessor::Fast;
 
-use_ok('MooX::Emulate::Class::Accessor::Fast');
 {
   package My::Test::Package;
   use Moo;
@@ -18,13 +17,11 @@ use_ok('MooX::Emulate::Class::Accessor::Fast');
 
 my $i = My::Test::Package->new(bar => 'bar');
 
-lives_ok {
-  $i->foo('foo');
-  $i->baz('baz');
+$i->foo('foo');
+$i->baz('baz');
 
-  is($i->foo, 'foo');
-  is($i->bar, 'bar');
-  is($i->{baz}, 'baz');
-} 'No exception';
+is($i->foo, 'foo');
+is($i->bar, 'bar');
+is($i->{baz}, 'baz');
 
 done_testing;
