@@ -2,6 +2,7 @@ Revision history for Perl extension MooX-Emulate-Class-Accessor-Fast.
 
 {{$NEXT}}
 
+ - Migrate all the tests from Test::More to Test2::V0.
  - Migrate build tooling from Dist::Zilla to Minilla.
 
 0.03 2015-02-04
